fix(docs-infra): prevent vertical nav item overflowing (#42561)
prevent the overflowing unwanted effect that happens during
a nav item opening and closing (during the chevron rotation)

PR Close #42561

--- a/aio/src/styles/1-layouts/sidenav/_sidenav.scss
+++ b/aio/src/styles/1-layouts/sidenav/_sidenav.scss
@@ -90,6 +90,7 @@ aio-nav-menu {
       background-color: transparent;
       margin: 0;
       width: 100%;
+      overflow: hidden;
     }
 
     .heading-children {
